--- a/index.html
+++ b/index.html
@@ -1,188 +1,224 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="./s.css" />
-		<script type="text/javascript" src="./jquery.js"></script>
-		<script type="text/javascript" src="./proj4js/proj4js-combined.js"></script>
-		<script type="text/javascript" src="./knockout.js"></script>
-		<script type="text/javascript" src="./latlon.js"></script>
-	
-		<script type="text/javascript">
-		$(function() { 
+<head>
+    <link rel="stylesheet" href="./s.css"/>
+    <link rel="stylesheet" href="./shiny-sprite.css"/>
+    <script type="text/javascript" src="./jquery.js"></script>
+    <script type="text/javascript" src="./proj4js/proj4js-combined.js"></script>
+    <script type="text/javascript" src="./knockout.js"></script>
+    <script type="text/javascript" src="./latlon.js"></script>
+    <script type="text/javascript" src="./countries.js"></script>
 
-			var options = {
-				apiVersion: "<!-- apiVersion -->",
-				contestId: "<!-- contestId -->",
-				raceId: "<!-- raceId -->"
-			}
+    <script type="text/javascript">
+        $(function () {
 
-            var sourceProjection = new Proj4js.Proj('EPSG:4326');
-            //Грузим файл с UTM проекциями
-            new Proj4js.Proj('EPSG:32635');
-
-			var table = {
-				timeout: ko.observable(0),
-				data: ko.observableArray([]),
-				sort: ko.observable("contest_number"),
-				setSort: function(sort) {
-					if (sort == this.sort()) this.sort(sort + "_desc");
-					else this.sort(sort);
-					updateData();
-				},
-                formatTime: function(time) {
-                    if(isNaN(time)||time === "") {
-                        return "-:-:-";
-                    }
-                    var dateFromLastSignal  = new Date(time);
-                    return getTimeString(Math.floor(dateFromLastSignal / 3600), Math.floor(dateFromLastSignal % 3600 / 60), dateFromLastSignal % 60);
-                }
-			}
-			ko.applyBindings(table);
-
-			var pilots = [];
-			var trackers = {};
-			var hq = null;
-
-			$.ajax({
-				url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/race/" + options.raceId + "/paragliders",
-				dataType: "json",
-				success: function(result) {
-					pilots = result;
-					runTick();
-				}
-			});
-
-			$.ajax({
-				url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/",
-				dataType: "json",
-				success: function(result) {
-					hq = new LatLon(result.coords[0],result.coords[1]);
-				}
-			});
-
-			var runTick = function() {
-				table.timeout(table.timeout()-1);
-				if (table.timeout() <= 0) {
-					$.ajax({
-						url: "http://api.airtribune.com/" + options.apiVersion + "/tracker",
-						dataType: "json",
-						success: function(result) {
-							trackers = {};
-							for (var i = 0; i < result.length; i++)
-								trackers[result[i].id] = result[i];
-							updateData();
-							table.timeout(10);
-							setTimeout(runTick,1000);
-						}
-					});
-				}
-				else {
-					setTimeout(runTick,1000);
-				}
-			}
-
-        var getTimeString = function(h,m,s) {
-            h = Math.abs(h);
-            m = Math.abs(m);
-            s = Math.abs(s);
-            return (h < 10 ? "0" : "") + h + ":" + (m < 10 ? "0" : "") + m + ":" + (s < 10 ? "0" : "") + s;
+            var options = {
+                apiVersion: "<!-- apiVersion -->",
+                        contestId:"<!-- contestId -->",
+            raceId: "<!-- raceId -->"
         }
 
-        var formatTime = function(){console.log(arguments)};
-			var updateData = function() {
-				var ar = [];
-				for (var i = 0; i < pilots.length; i++) {
-					var rw = $.extend({last_update:"",tracker_name:pilots[i].tracker,alt:"",coords:"",dist:0,gspd:0, charge:'-', url:""},pilots[i]);
-					var rwTr = trackers[rw.tracker];
-					if (rwTr) {
-						rw.tracker_name = rwTr.name;
-						if (rwTr.last_point) {
-                            rw.last_update = Math.floor((new Date).getTime()/1000-rwTr.last_point[3]);
-							rw.alt = rwTr.last_point[2];
-                            /*if(!rwTr.last_point[0] || rwTr.last_point[1])
-                                continue;*/
-                            if(!rwTr.last_point[0] || !rwTr.last_point[1]) {
-                                rw.coords = rw.gspd = rw.dist =" - ";
-                            } else {
-                                var utmZone = (Math.floor((rwTr.last_point[1] + 180)/6) % 60) + 1,
-                                        coordinate = new Proj4js.Point(rwTr.last_point[1], rwTr.last_point[0]);
-                                //Переопределяем UTM проекцию
-                                Proj4js.defs["EPSG:32635"] = "+proj=utm +zone=" + utmZone +" +ellps=WGS84 +datum=WGS84 +units=m +no_defs";
-                                Proj4js.transform(sourceProjection, new Proj4js.Proj('EPSG:32635'), coordinate);
+        var sourceProjection = new Proj4js.Proj('EPSG:4326');
+        //Грузим файл с UTM проекциями
+        new Proj4js.Proj('EPSG:32635');
 
-                                rw.coords = "(" + rwTr.last_point[0] + "," + rwTr.last_point[1] + ") / ("+utmZone+"T " + coordinate.x.toFixed(0) + " " + coordinate.y.toFixed(0) + ")";
-                                rw.url = "https://maps.google.com/?q="+rwTr.last_point[0]+","+rwTr.last_point[1]+"&z=13";
-                                rw.gspd = rwTr.last_point[5] || 0;
-                                rw.gspd = Math.floor(rw.gspd*100)/100;
-                                rw.charge = rwTr.last_point[4];
-                                if (isNaN(rw.gspd)) rw.gspd = 0;
-                                rw.dist = hq ? hq.distanceTo(new LatLon(rwTr.last_point[0],rwTr.last_point[1])) : 0;
-                                rw.dist = Math.floor(rw.dist*100)/100;
-                                if (isNaN(rw.dist)) rw.dist = 0;
-                            }
+        var table = {
+            timeout: ko.observable(0),
+            data: ko.observableArray([]),
+            sort: ko.observable("contest_number"),
+            setSort: function (sort) {
+                if (sort == this.sort()) this.sort(sort + "_desc");
+                else this.sort(sort);
+                updateData();
+            },
+            formatTime: function (time) {
+                if (isNaN(time) || time === "" || time === Infinity) {
+                    return "-:-:-";
+                }
+                time = Math.floor(time / 1000);
+                var secInDay = 3600 * 24,
+                        days = Math.floor(time / secInDay),
+                        rest = days ? time % (days * secInDay) : time,
+                        hours = Math.floor(rest / 3600),
+                        rest = hours ? rest % (hours * 3600) : rest,
+                        mins = Math.floor(rest / 60),
+                        rest = mins ? rest % (mins * 60) : rest,
+                        secs = Math.floor(rest);
 
-						}
-					}
-					ar.push(rw);
-				}
-				var desc = table.sort().match(/\_desc$/) ? -1 : 1;
-				var sort = table.sort().replace(/\_desc$/,"");
-				ar.sort(function(rw1,rw2) {
-					if (rw1[sort] == rw2[sort]) return 0;
-					if (sort == "contest_number" || sort == "last_update" || sort == "alt" || sort == "dist" || sort == "gspd") {
-						r1 = Math.floor(rw1[sort]*100);
-						r2 = Math.floor(rw2[sort]*100);
-						if (isNaN(r1)) r1 = 0;
-						if (isNaN(r2)) r2 = 0;
-//						if (sort == "dist") console.log(r1,r2);
-						if (r1 == r2) return 0;
-						return r1 < r2 ? -1*desc : desc;
-					}
-					if (sort == "name") {
-						var n1 = rw1.name.replace(/^\S+\.\s+/,"");
-						var n2 = rw2.name.replace(/^\S+\.\s+/,"");
-						return n1 < n2 ? -1*desc : desc;
-					}
-					return rw1[sort] < rw2[sort] ? -1*desc : desc;
-				});
-				table.data(ar);
-			}
-		});
-		</script>
-	
-	</head>
+                return getTimeString(days, hours, mins, secs);
+            }
+        }
+        ko.applyBindings(table);
 
-	<body>
-	<p class="timeout">reload data after <span data-bind="text: timeout"></span> sec</p>
-		<table>
-			<thead>
-				<tr>
-					<th>#</th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'contest_number'),css:{'asc':sort()=='contest_number','desc':sort()=='contest_number_desc'}">Pilot #</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'name'),css:{'asc':sort()=='name','desc':sort()=='name_desc'}">Name</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'last_update'),css:{'asc':sort()=='last_update','desc':sort()=='last_update_desc'}">Last Update (sec ago)</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'charge'),css:{'asc':sort()=='charge','desc':sort()=='charge_desc'}">Charge (%)</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'tracker_name'),css:{'asc':sort()=='tracker_name','desc':sort()=='tracker_name_desc'}">Tracker #</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'alt'),css:{'asc':sort()=='alt','desc':sort()=='alt_desc'}">Alt</a></th>
-					<th>Coordinates</th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'gspd'),css:{'asc':sort()=='gspd','desc':sort()=='gspd_desc'}">Spd</a></th>
-					<th><a href="#" data-bind="click:setSort.bind($data,'dist'),css:{'asc':sort()=='dist','desc':sort()=='dist_desc'}">Dist from HQ km</a></th>
-				</tr>
-			</thead>
-			<tbody data-bind="foreach: data">
-				<tr>
-					<td class="num" data-bind="text:$index()+1"></td>
-					<td class="num" data-bind="text:contest_number"></td>
-					<td data-bind="text:name"></td>
-					<td class="num" data-bind="text:$parent.formatTime(last_update)"></td>
-					<td class="num" data-bind="text:charge"></td>
-					<td data-bind="text:tracker_name"></td>
-					<td class="num" data-bind="text:alt"></td>
-					<td ><a target="_blank" data-bind="text:coords, attr:{href:url}"></a></td>
-					<td class="num" data-bind="text:gspd"></td>
-					<td class="num" data-bind="text:dist"></td>
-				</tr>
-			</tbody>
-		</table>
-	</body>
+        var pilots = [];
+        var trackers = {};
+        var hq = null;
+
+        $.ajax({
+            url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/race/" + options.raceId + "/paragliders",
+            dataType: "json",
+            success: function (result) {
+                pilots = result;
+                runTick();
+            }
+        });
+
+        $.ajax({
+            url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/",
+            dataType: "json",
+            success: function (result) {
+                hq = new LatLon(result.coords[0], result.coords[1]);
+            }
+        });
+
+        var runTick = function () {
+            table.timeout(table.timeout() - 1);
+            if (table.timeout() <= 0) {
+                $.ajax({
+                    url: "http://api.airtribune.com/" + options.apiVersion + "/tracker",
+                    dataType: "json",
+                    success: function (result) {
+                        trackers = {};
+                        for (var i = 0; i < result.length; i++)
+                            trackers[result[i].id] = result[i];
+                        updateData();
+                        table.timeout(10);
+                        setTimeout(runTick, 1000);
+                    }
+                });
+            }
+            else {
+                setTimeout(runTick, 1000);
+            }
+        }
+
+        var getTimeString = function (d, h, m, s) {
+            d = d > 0 ?
+                    d > 1 ? d + 'days' : d + 'day'
+                    : '';
+            h = h > 0 ? h + 'h' : '';
+            m = m > 0 ? m + 'min' : '';
+            s = s != 0 && !h ? s + 'sec' : '';
+            return [d, h, m, s].join(' ');
+        }
+
+        var updateData = function () {
+            var ar = [];
+            for (var i = 0; i < pilots.length; i++) {
+                var rw = $.extend({last_update: Infinity, tracker_name: pilots[i].tracker, alt: "", coords: "", dist: 0, gspd: 0, charge: '-', url: ""}, pilots[i]);
+                var rwTr = trackers[rw.tracker];
+                if (rwTr) {
+                    rw.tracker_name = rwTr.name;
+                    if (rwTr.last_point) {
+                        rw.coords = {};
+                        rw.last_update = Math.floor(rwTr.last_point[3]);
+                        rw.alt = rwTr.last_point[2];
+                        if (!rwTr.last_point[0] || !rwTr.last_point[1]) {
+                            rw.coords = rw.gspd = rw.dist = " - ";
+                        } else {
+                            var utmZone = (Math.floor((rwTr.last_point[1] + 180) / 6) % 60) + 1,
+                                    coordinate = new Proj4js.Point(rwTr.last_point[1], rwTr.last_point[0]);
+                            //Переопределяем UTM проекцию
+                            Proj4js.defs["EPSG:32635"] = "+proj=utm +zone=" + utmZone + " +ellps=WGS84 +datum=WGS84 +units=m +no_defs";
+                            Proj4js.transform(sourceProjection, new Proj4js.Proj('EPSG:32635'), coordinate);
+                            rw.coords.latlng = rwTr.last_point[0] + "," + rwTr.last_point[1];
+                            rw.coords.utm = ' / ' + utmZone + "T " + coordinate.x.toFixed(0) + " " + coordinate.y.toFixed(0);
+                            rw.url = "https://maps.google.com/?q=" + rwTr.last_point[0] + "," + rwTr.last_point[1] + "&z=13";
+                            rw.gspd = rwTr.last_point[5] || 0;
+                            rw.gspd = Math.floor(rw.gspd * 100) / 100;
+                            rw.charge = rwTr.last_point[4];
+                            if (isNaN(rw.gspd)) rw.gspd = 0;
+                            rw.dist = hq ? hq.distanceTo(new LatLon(rwTr.last_point[0], rwTr.last_point[1])) : 0;
+                            rw.dist = Math.floor(rw.dist * 100) / 100;
+                            if (isNaN(rw.dist)) rw.dist = 0;
+                        }
+
+                    }
+                }
+                ar.push(rw);
+            }
+            var desc = table.sort().match(/\_desc$/) ? -1 : 1;
+            var sort = table.sort().replace(/\_desc$/, "");
+            ar.sort(function (rw1, rw2) {
+                if (rw1[sort] == rw2[sort]) return 0;
+                if (sort == "contest_number" || sort == "last_update" || sort == "alt" || sort == "dist" || sort == "gspd") {
+                    r1 = Math.floor(rw1[sort] * 100);
+                    r2 = Math.floor(rw2[sort] * 100);
+                    if (isNaN(r1)) r1 = 0;
+                    if (isNaN(r2)) r2 = 0;
+                    if (r1 == r2) return 0;
+                    return r1 < r2 ? -1 * desc : desc;
+                }
+                if (sort == "name") {
+                    var n1 = rw1.name.replace(/^\S+\.\s+/, "");
+                    var n2 = rw2.name.replace(/^\S+\.\s+/, "");
+                    return n1 < n2 ? -1 * desc : desc;
+                }
+                return rw1[sort] < rw2[sort] ? -1 * desc : desc;
+            });
+            table.data(ar);
+        }
+        })
+        ;
+    </script>
+
+</head>
+
+<body>
+<p class="timeout">reload data after <span data-bind="text: timeout"></span> sec</p>
+<table>
+    <thead>
+    <tr>
+        <th>#</th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'contest_number'),css:{'asc':sort()=='contest_number','desc':sort()=='contest_number_desc'}">Pilot's
+            &#8470;</a></th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'name'),css:{'asc':sort()=='name','desc':sort()=='name_desc'}">Pilot</a>
+        </th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'last_update'),css:{'asc':sort()=='last_update','desc':sort()=='last_update_desc'}">Data
+            age</a></th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'charge'),css:{'asc':sort()=='charge','desc':sort()=='charge_desc'}">Battery,
+            %</a></th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'tracker_name'),css:{'asc':sort()=='tracker_name','desc':sort()=='tracker_name_desc'}">Tracker</a>
+        </th>
+        <th><a href="#" data-bind="click:setSort.bind($data,'alt'),css:{'asc':sort()=='alt','desc':sort()=='alt_desc'}">Alt,
+            m</a>
+        </th>
+        <th>Coordinates</th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'gspd'),css:{'asc':sort()=='gspd','desc':sort()=='gspd_desc'}">Spd,
+            km/h</a>
+        </th>
+        <th><a href="#"
+               data-bind="click:setSort.bind($data,'dist'),css:{'asc':sort()=='dist','desc':sort()=='dist_desc'}">Dist
+            to HQ, km</a></th>
+    </tr>
+    </thead>
+    <tbody data-bind="foreach: data">
+    <tr>
+        <td class="num" data-bind="text:$index()+1"></td>
+        <td class="num" data-bind="text:contest_number"></td>
+        <td>
+            <span data-bind="attr:{'data-tip':COUNTRIES[country]}">
+                <span data-bind="attr:{class:'countryicon-sprite iconset-shiny countrycode-'+country.toLowerCase()}"></span>
+            </span>
+            <span data-bind="text:name"></span>
+        </td>
+        <td class="num" data-bind="text:$parent.formatTime(last_update)"></td>
+        <td class="num" data-bind="text:charge"></td>
+        <td data-bind="text:tracker_name"></td>
+        <td class="num" data-bind="text:alt"></td>
+        <td><a target="_blank" data-bind="text:coords.latlng, attr:{href:url}"></a><span
+                data-bind="text:coords.utm"></span></td>
+        <td class="num" data-bind="text:gspd"></td>
+        <td class="num" data-bind="text:dist"></td>
+    </tr>
+    </tbody>
+</table>
+<div c></div>
+</body>
 </html>
