--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="./bootstrap.min.css"/>
     <link rel="stylesheet" href="./s.css"/>
     <link rel="stylesheet" href="./shiny-sprite.css"/>
     <script type="text/javascript" src="./jquery.js"></script>
@@ -13,151 +14,151 @@
         $(function () {
 
             var options = {
-                apiVersion: "<!-- apiVersion -->",
-                        contestId:"<!-- contestId -->",
-            raceId: "<!-- raceId -->"
-        }
-
-        var sourceProjection = new Proj4js.Proj('EPSG:4326');
-        //Грузим файл с UTM проекциями
-        new Proj4js.Proj('EPSG:32635');
-
-        var table = {
-            timeout: ko.observable(0),
-            data: ko.observableArray([]),
-            sort: ko.observable("contest_number"),
-            setSort: function (sort) {
-                if (sort == this.sort()) this.sort(sort + "_desc");
-                else this.sort(sort);
-                updateData();
-            },
-            formatTime: function (time) {
-                if (isNaN(time) || time === "" || time === Infinity) {
-                    return "-:-:-";
-                }
-                time = Math.floor(time / 1000);
-                var secInDay = 3600 * 24,
-                        days = Math.floor(time / secInDay),
-                        rest = days ? time % (days * secInDay) : time,
-                        hours = Math.floor(rest / 3600),
-                        rest = hours ? rest % (hours * 3600) : rest,
-                        mins = Math.floor(rest / 60),
-                        rest = mins ? rest % (mins * 60) : rest,
-                        secs = Math.floor(rest);
-
-                return getTimeString(days, hours, mins, secs);
+                apiVersion: "!-- apiVersion --",
+                contestId: "!-- contestId --",
+                raceId: "!-- raceId --"
             }
-        }
-        ko.applyBindings(table);
 
-        var pilots = [];
-        var trackers = {};
-        var hq = null;
+            var sourceProjection = new Proj4js.Proj('EPSG:4326');
+            //Грузим файл с UTM проекциями
+            new Proj4js.Proj('EPSG:32635');
 
-        $.ajax({
-            url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/race/" + options.raceId + "/paragliders",
-            dataType: "json",
-            success: function (result) {
-                pilots = result;
-                runTick();
-            }
-        });
-
-        $.ajax({
-            url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/",
-            dataType: "json",
-            success: function (result) {
-                hq = new LatLon(result.coords[0], result.coords[1]);
-            }
-        });
-
-        var runTick = function () {
-            table.timeout(table.timeout() - 1);
-            if (table.timeout() <= 0) {
-                $.ajax({
-                    url: "http://api.airtribune.com/" + options.apiVersion + "/tracker",
-                    dataType: "json",
-                    success: function (result) {
-                        trackers = {};
-                        for (var i = 0; i < result.length; i++)
-                            trackers[result[i].id] = result[i];
-                        updateData();
-                        table.timeout(10);
-                        setTimeout(runTick, 1000);
+            var table = {
+                timeout: ko.observable(0),
+                data: ko.observableArray([]),
+                sort: ko.observable("contest_number"),
+                setSort: function (sort) {
+                    if (sort == this.sort()) this.sort(sort + "_desc");
+                    else this.sort(sort);
+                    updateData();
+                },
+                formatTime: function (time) {
+                    if (isNaN(time) || time === "" || time === Infinity) {
+                        return "-:-:-";
                     }
-                });
-            }
-            else {
-                setTimeout(runTick, 1000);
-            }
-        }
+                    time = Math.floor(time / 1000);
+                    var secInDay = 3600 * 24,
+                            days = Math.floor(time / secInDay),
+                            rest = days ? time % (days * secInDay) : time,
+                            hours = Math.floor(rest / 3600),
+                            rest = hours ? rest % (hours * 3600) : rest,
+                            mins = Math.floor(rest / 60),
+                            rest = mins ? rest % (mins * 60) : rest,
+                            secs = Math.floor(rest);
 
-        var getTimeString = function (d, h, m, s) {
-            d = d > 0 ?
-                    d > 1 ? d + 'days' : d + 'day'
-                    : '';
-            h = h > 0 ? h + 'h' : '';
-            m = m > 0 ? m + 'min' : '';
-            s = s != 0 && !h ? s + 'sec' : '';
-            return [d, h, m, s].join(' ');
-        }
-
-        var updateData = function () {
-            var ar = [];
-            for (var i = 0; i < pilots.length; i++) {
-                var rw = $.extend({last_update: Infinity, tracker_name: pilots[i].tracker, alt: "", coords: "", dist: 0, gspd: 0, charge: '-', url: ""}, pilots[i]);
-                var rwTr = trackers[rw.tracker];
-                if (rwTr) {
-                    rw.tracker_name = rwTr.name;
-                    if (rwTr.last_point) {
-                        rw.coords = {};
-                        rw.last_update = Math.floor(rwTr.last_point[3]);
-                        rw.alt = rwTr.last_point[2];
-                        if (!rwTr.last_point[0] || !rwTr.last_point[1]) {
-                            rw.coords = rw.gspd = rw.dist = " - ";
-                        } else {
-                            var utmZone = (Math.floor((rwTr.last_point[1] + 180) / 6) % 60) + 1,
-                                    coordinate = new Proj4js.Point(rwTr.last_point[1], rwTr.last_point[0]);
-                            //Переопределяем UTM проекцию
-                            Proj4js.defs["EPSG:32635"] = "+proj=utm +zone=" + utmZone + " +ellps=WGS84 +datum=WGS84 +units=m +no_defs";
-                            Proj4js.transform(sourceProjection, new Proj4js.Proj('EPSG:32635'), coordinate);
-                            rw.coords.latlng = rwTr.last_point[0] + "," + rwTr.last_point[1];
-                            rw.coords.utm = ' / ' + utmZone + "T " + coordinate.x.toFixed(0) + " " + coordinate.y.toFixed(0);
-                            rw.url = "https://maps.google.com/?q=" + rwTr.last_point[0] + "," + rwTr.last_point[1] + "&z=13";
-                            rw.gspd = rwTr.last_point[5] || 0;
-                            rw.gspd = Math.floor(rw.gspd * 100) / 100;
-                            rw.charge = rwTr.last_point[4];
-                            if (isNaN(rw.gspd)) rw.gspd = 0;
-                            rw.dist = hq ? hq.distanceTo(new LatLon(rwTr.last_point[0], rwTr.last_point[1])) : 0;
-                            rw.dist = Math.floor(rw.dist * 100) / 100;
-                            if (isNaN(rw.dist)) rw.dist = 0;
-                        }
-
-                    }
+                    return getTimeString(days, hours, mins, secs);
                 }
-                ar.push(rw);
             }
-            var desc = table.sort().match(/\_desc$/) ? -1 : 1;
-            var sort = table.sort().replace(/\_desc$/, "");
-            ar.sort(function (rw1, rw2) {
-                if (rw1[sort] == rw2[sort]) return 0;
-                if (sort == "contest_number" || sort == "last_update" || sort == "alt" || sort == "dist" || sort == "gspd") {
-                    r1 = Math.floor(rw1[sort] * 100);
-                    r2 = Math.floor(rw2[sort] * 100);
-                    if (isNaN(r1)) r1 = 0;
-                    if (isNaN(r2)) r2 = 0;
-                    if (r1 == r2) return 0;
-                    return r1 < r2 ? -1 * desc : desc;
+            ko.applyBindings(table);
+
+            var pilots = [];
+            var trackers = {};
+            var hq = null;
+
+            $.ajax({
+                url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/race/" + options.raceId + "/paragliders",
+                dataType: "json",
+                success: function (result) {
+                    pilots = result;
+                    runTick();
                 }
-                if (sort == "name") {
-                    var n1 = rw1.name.replace(/^\S+\.\s+/, "");
-                    var n2 = rw2.name.replace(/^\S+\.\s+/, "");
-                    return n1 < n2 ? -1 * desc : desc;
-                }
-                return rw1[sort] < rw2[sort] ? -1 * desc : desc;
             });
-            table.data(ar);
-        }
+
+            $.ajax({
+                url: "http://api.airtribune.com/" + options.apiVersion + "/contest/" + options.contestId + "/",
+                dataType: "json",
+                success: function (result) {
+                    hq = new LatLon(result.coords[0], result.coords[1]);
+                }
+            });
+
+            var runTick = function () {
+                table.timeout(table.timeout() - 1);
+                if (table.timeout() <= 0) {
+                    $.ajax({
+                        url: "http://api.airtribune.com/" + options.apiVersion + "/tracker",
+                        dataType: "json",
+                        success: function (result) {
+                            trackers = {};
+                            for (var i = 0; i < result.length; i++)
+                                trackers[result[i].id] = result[i];
+                            updateData();
+                            table.timeout(10);
+                            setTimeout(runTick, 1000);
+                        }
+                    });
+                }
+                else {
+                    setTimeout(runTick, 1000);
+                }
+            }
+
+            var getTimeString = function (d, h, m, s) {
+                d = d > 0 ?
+                        d > 1 ? d + 'days' : d + 'day'
+                        : '';
+                h = h > 0 ? h + 'h' : '';
+                m = m > 0 ? m + 'min' : '';
+                s = s != 0 && !h ? s + 'sec' : '';
+                return [d, h, m, s].join(' ');
+            }
+
+            var updateData = function () {
+                var ar = [];
+                for (var i = 0; i < pilots.length; i++) {
+                    var rw = $.extend({last_update: Infinity, tracker_name: pilots[i].tracker, alt: "", coords: "", dist: 0, gspd: 0, charge: '-', url: ""}, pilots[i]);
+                    var rwTr = trackers[rw.tracker];
+                    if (rwTr) {
+                        rw.tracker_name = rwTr.name;
+                        if (rwTr.last_point) {
+                            rw.coords = {};
+                            rw.last_update = Math.floor(rwTr.last_point[3]);
+                            rw.alt = rwTr.last_point[2];
+                            if (!rwTr.last_point[0] || !rwTr.last_point[1]) {
+                                rw.coords = rw.gspd = rw.dist = " - ";
+                            } else {
+                                var utmZone = (Math.floor((rwTr.last_point[1] + 180) / 6) % 60) + 1,
+                                        coordinate = new Proj4js.Point(rwTr.last_point[1], rwTr.last_point[0]);
+                                //Переопределяем UTM проекцию
+                                Proj4js.defs["EPSG:32635"] = "+proj=utm +zone=" + utmZone + " +ellps=WGS84 +datum=WGS84 +units=m +no_defs";
+                                Proj4js.transform(sourceProjection, new Proj4js.Proj('EPSG:32635'), coordinate);
+                                rw.coords.latlng = rwTr.last_point[0] + "," + rwTr.last_point[1];
+                                rw.coords.utm = ' / ' + utmZone + "T " + coordinate.x.toFixed(0) + " " + coordinate.y.toFixed(0);
+                                rw.url = "https://maps.google.com/?q=" + rwTr.last_point[0] + "," + rwTr.last_point[1] + "&z=13";
+                                rw.gspd = rwTr.last_point[5] || 0;
+                                rw.gspd = Math.floor(rw.gspd * 100) / 100;
+                                rw.charge = rwTr.last_point[4];
+                                if (isNaN(rw.gspd)) rw.gspd = 0;
+                                rw.dist = hq ? hq.distanceTo(new LatLon(rwTr.last_point[0], rwTr.last_point[1])) : 0;
+                                rw.dist = Math.floor(rw.dist * 100) / 100;
+                                if (isNaN(rw.dist)) rw.dist = 0;
+                            }
+
+                        }
+                    }
+                    ar.push(rw);
+                }
+                var desc = table.sort().match(/\_desc$/) ? -1 : 1;
+                var sort = table.sort().replace(/\_desc$/, "");
+                ar.sort(function (rw1, rw2) {
+                    if (rw1[sort] == rw2[sort]) return 0;
+                    if (sort == "contest_number" || sort == "last_update" || sort == "alt" || sort == "dist" || sort == "gspd") {
+                        r1 = Math.floor(rw1[sort] * 100);
+                        r2 = Math.floor(rw2[sort] * 100);
+                        if (isNaN(r1)) r1 = 0;
+                        if (isNaN(r2)) r2 = 0;
+                        if (r1 == r2) return 0;
+                        return r1 < r2 ? -1 * desc : desc;
+                    }
+                    if (sort == "name") {
+                        var n1 = rw1.name.replace(/^\S+\.\s+/, "");
+                        var n2 = rw2.name.replace(/^\S+\.\s+/, "");
+                        return n1 < n2 ? -1 * desc : desc;
+                    }
+                    return rw1[sort] < rw2[sort] ? -1 * desc : desc;
+                });
+                table.data(ar);
+            }
         })
         ;
     </script>
@@ -165,15 +166,17 @@
 </head>
 
 <body>
+<img src="img/logo.png" class="logo">
 <p class="timeout">reload data after <span data-bind="text: timeout"></span> sec</p>
 <table>
+    <caption>Retrieve data table</caption>
     <thead>
     <tr>
         <th>#</th>
         <th><a href="#"
                data-bind="click:setSort.bind($data,'contest_number'),css:{'asc':sort()=='contest_number','desc':sort()=='contest_number_desc'}">Pilot's
             &#8470;</a></th>
-        <th><a href="#"
+        <th class="name"><a href="#"
                data-bind="click:setSort.bind($data,'name'),css:{'asc':sort()=='name','desc':sort()=='name_desc'}">Pilot</a>
         </th>
         <th><a href="#"
@@ -202,11 +205,11 @@
     <tr>
         <td class="num" data-bind="text:$index()+1"></td>
         <td class="num" data-bind="text:contest_number"></td>
-        <td>
+        <td class="name">
+            <span data-bind="text:name"></span>
             <span data-bind="attr:{'data-tip':COUNTRIES[country]}">
                 <span data-bind="attr:{class:'countryicon-sprite iconset-shiny countrycode-'+country.toLowerCase()}"></span>
             </span>
-            <span data-bind="text:name"></span>
         </td>
         <td class="num" data-bind="text:$parent.formatTime(last_update)"></td>
         <td class="num" data-bind="text:charge"></td>
